--- a/apps.json
+++ b/apps.json
@@ -10,7 +10,7 @@
       "size": "78.4 MB",
       "requirements": "Android 9.0+",
       "category": "Мессенджеры",
-      "developer": "AyuGram Team",
+      "developer": "AyuGram",
       "downloadUrl": "https://download946.mediafire.com/pk9grzv0u5jgHMuLQv4zvdDM7hfdFptDt16ScYcyN0_8GyJq0AML4-mDwYeDSGmd-WhMb85u0mIWsZbOlBi95_wiLzh1AcObd6UGD0KW2HunTj5dUJ4uDxSv7SjxOksA5OD5kPU-4XXceM2AuOUBq6_WJA-9jsFk62k6nM3idt8/x2gvchd9h4iammt/vanilla-ayuGram-universal-20250624.apk"
     },
     {
