--- a/apps.json
+++ b/apps.json
@@ -83,7 +83,7 @@
     {
       "id": "ADcontrol",
       "name": "ADcontrol",
-      "icon": "https://trashbox.ru/apk_icons/topic_134225_256.png?1757061370",
+      "icon": "https://play-lh.googleusercontent.com/HRtFR4eLh2kx2o13_3KQdWHzPitvFmXZ5Ym0icTLKL41VtpKpqI0DlRNlTKxbNV8R3g",
       "shortDescription": "Плагин для AnyDesk, обязательный к скачиванию",
       "description": "Плагин для приложения AnyDesk - Проприетарное программное обеспечение для удалённого доступа, удалённого управления и удалённого обслуживания компьютеров и других конечных устройств, выпущенное в 2015 году, разрабатываемое компанией AnyDesk Software GmbH[2]. Предлагает возможности удалённого управления, передачи файлов и VPN.",
       "version": "8.0.2",
